Implement ship placement

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    hello
+    <div class="game">
+        <div class="human-board"></div>
+        <div class="ships-container"></div>
+        <button id="rotate">Rotate</button>
+        
+    </div>
 </body>
 </html>
