--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,39 @@
 </head>
 <body>
     <div class="game">
-        <div class="human-board"></div>
-        <div class="ships-container"></div>
+        <div class="board-container">
+            <div class="player-board board"></div>
+            <div class="computer-board board"></div>
+        </div>
+        <div class="ships-container">
+            <div class="ship" data-ship-id="Destroyer">
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="ship" data-ship-id="Submarine">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="ship" data-ship-id="Cruiser">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="ship" data-ship-id="Battleship">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="ship" data-ship-id="Carrier">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+        </div>
         <button id="rotate">Rotate</button>
         
     </div>
