Implement placing ships randomly

--- a/src/template.html
+++ b/src/template.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <button id="rotate">Rotate</button>
-        
+        <button id="random">Place ships randomly</button>
     </div>
 </body>
 </html>
