Generate ship elements dynamically

--- a/src/template.html
+++ b/src/template.html
@@ -11,35 +11,7 @@
             <div class="player-board board"></div>
             <div class="computer-board board"></div>
         </div>
-        <div class="ships-container">
-            <div class="ship" data-ship-id="Destroyer">
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="ship" data-ship-id="Submarine">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="ship" data-ship-id="Cruiser">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="ship" data-ship-id="Battleship">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-            <div class="ship" data-ship-id="Carrier">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-            </div>
-        </div>
+        <div class="ships-container"></div>
         <button id="rotate">Rotate</button>
         <button id="random">Place ships randomly</button>
     </div>
