Implement reset functionality

--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,7 @@
         <div class="ships-container"></div>
         <button id="rotate">Rotate</button>
         <button id="random">Place ships randomly</button>
+        <button id="reset">Reset</button>
     </div>
 </body>
 </html>
