--- a/src/template.html
+++ b/src/template.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Battleship</title>
 </head>
 <body>
     <div class="game">
+        <p id="message"></p>
         <div class="board-container">
             <div class="player-board board"></div>
             <div class="computer-board board"></div>
         </div>
         <div class="ships-container"></div>
-        <button id="rotate">Rotate</button>
-        <button id="random">Place ships randomly</button>
-        <button id="reset">Reset</button>
+        <div class="controls">
+            <button id="rotate">Rotate</button>
+            <button id="random">Place ships randomly</button>
+            <button id="reset">Reset</button>
+        </div>
     </div>
 </body>
 </html>
