--- a/src/template.html
+++ b/src/template.html
@@ -14,9 +14,16 @@
         </div>
         <div class="ships-container"></div>
         <div class="controls">
-            <button id="rotate">Rotate</button>
-            <button id="random">Place ships randomly</button>
-            <button id="reset">Reset</button>
+            <div class="options">
+                <button id="rotate">Rotate</button>
+                <button id="random">Place ships randomly</button>
+                <button id="reset">Reset</button>
+            </div>
+            <div class="difficulty">
+                <p>Difficulty: </p>
+                <button id="random-difficulty" data-difficulty="random">Random</button>
+                <button id="easy" class="selected" data-difficulty="easy">Easy</button>
+            </div>  
         </div>
     </div>
 </body>
