--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battleship</title>
-<script defer src="main.js"></script></head>
-<body>
-    <div class="game">
-        <p id="message"></p>
-        <div class="board-container">
-            <div class="player-board board"></div>
-            <div class="computer-board board"></div>
-        </div>
-        <div class="ships-container"></div>
-        <div class="controls">
-            <div class="options">
-                <button id="rotate">Rotate</button>
-                <button id="random">Place ships randomly</button>
-                <button id="reset">Reset</button>
-            </div>
-            <div class="difficulty">
-                <p>Difficulty: </p>
-                <button id="random-difficulty" data-difficulty="random">Random</button>
-                <button id="easy" class="selected" data-difficulty="easy">Easy</button>
-            </div>  
-        </div>
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Battleship</title><script defer="defer" src="main.js"></script></head><body><div class="game"><p id="message"></p><div class="board-container"><div class="player-board board"></div><div class="computer-board board"></div></div><div class="ships-container"></div><div class="controls"><div class="options"><button id="rotate">Rotate</button> <button id="random">Place ships randomly</button> <button id="reset">Reset</button></div><div class="difficulty"><p>Difficulty:</p><button id="random-difficulty" data-difficulty="random">Random</button> <button id="easy" class="selected" data-difficulty="easy">Easy</button></div></div></div></body></html>
